--- a/paper/main.tex
+++ b/paper/main.tex
@@ -109,10 +109,23 @@ an open problem. We resolve it for two-layer ReLU networks.
   This provides a \emph{sufficient} condition on the width for a benign landscape; as we
   discuss in Section~\ref{sec:landscape-dynamics}, it is not a necessary condition for
   successful optimization.
+  Empirical training dynamics confirm that the boundary is meaningful but not sharp
+  in practice (Figure~\ref{fig:empirical-validation}).
+
+  \item \textbf{Spectral characterization.} We give an explicit fixed-point equation for $\gamma_\star$ in terms
+  of the Stieltjes transform of the limiting spectral distribution of the data Gram matrix
+  (Theorem~\ref{thm:critical-ratio}; Figure~\ref{fig:spectral-density}).
+
+  \item \textbf{Universal scaling at the transition.} We prove that the spectral gap of the Hessian
+  at critical points scales as $|\gamma - \gamma_\star|$ near the transition, with universal critical
+  exponent $\beta = 1$ (Theorem~\ref{thm:scaling}; Figure~\ref{fig:scaling-law}).
+
+  \item \textbf{Spectral decoupling technique.} We introduce a decomposition of the Hessian
+  at critical points into a ``data block'' and a ``weight block'' coupled through a rank-deficient
+  interaction term (Section~\ref{sec:decoupling}), which may be of independent interest.
 \end{enumerate}
 
-%%% FIGURE 1: Phase diagram — placed immediately after the threshold contribution
-\begin{figure}[!ht]
+\begin{figure}[t]
 \centering
 \begin{tikzpicture}
 \begin{axis}[
@@ -145,31 +158,14 @@ an open problem. We resolve it for two-layer ReLU networks.
 \label{fig:phase-diagram}
 \end{figure}
 
-Empirical training dynamics confirm that the boundary is meaningful but not sharp
-in practice (Figure~\ref{fig:empirical-validation}).
-
-%%% FIGURE 2: Training dynamics — placed immediately after the empirical statement
-\begin{figure}[!ht]
+\begin{figure}[t]
 \centering
 \includegraphics[width=0.75\textwidth]{figures/fig4_phase_boundary_empirical.pdf}
 \caption[Training dynamics and the topological boundary]{Training dynamics for two-layer ReLU networks with $n=100$, gradient flow optimization ($\eta = 5 \times 10^{-4}$, $20{,}000$ steps), nonlinear teacher with $m_{\mathrm{teacher}} = n/2$. Color encodes $\log_{10}(\text{median loss})$ over 3 seeds per $(\delta, \gamma)$ pair. The dashed curve shows the theoretical topological boundary $\gamma^\star = 4/(2 + 3\delta)$ from Theorem~\ref{thm:phase-transition}. While the theory predicts a landscape transition at $\gamma^\star$, gradient flow achieves low loss even in parts of the subcritical regime, indicating that the optimization trajectory avoids the spurious critical points predicted by the static analysis (see Section~\ref{sec:landscape-dynamics}).}
 \label{fig:empirical-validation}
 \end{figure}
 
-\begin{enumerate}[label=(\roman*), resume]
-  \item \textbf{Spectral characterization.} We give an explicit fixed-point equation for $\gamma_\star$ in terms
-  of the Stieltjes transform of the limiting spectral distribution of the data Gram matrix
-  (Theorem~\ref{thm:critical-ratio}; Figure~\ref{fig:spectral-density}).
-
-  \item \textbf{Universal scaling at the transition.} We prove that the spectral gap of the Hessian
-  at critical points scales as $|\gamma - \gamma_\star|$ near the transition, with universal critical
-  exponent $\beta = 1$ (Theorem~\ref{thm:scaling}; Figure~\ref{fig:scaling-law}).
-
-  \item \textbf{Spectral decoupling technique.} We introduce a decomposition of the Hessian
-  at critical points into a ``data block'' and a ``weight block'' coupled through a rank-deficient
-  interaction term (Section~\ref{sec:decoupling}), which may be of independent interest.
-\end{enumerate}
-
+\FloatBarrier
 \subsection{Related work}
 
 \paragraph{From spin glasses to sharp thresholds.}
@@ -208,6 +204,7 @@ random matrix theory directly to the Hessian at critical points, decomposing it 
 blocks whose spectra are governed by the data covariance interacting with the
 activation-gated sample covariance.
 
+\FloatBarrier
 \section{Problem Setup}
 
 \subsection{Network architecture and loss}
@@ -515,7 +512,7 @@ Let $s_\nu(z) = \int \frac{1}{\lambda - z}\,d\nu(\lambda)$ denote the Stieltjes 
   dynamically inaccessible to practical optimization trajectories.
 \end{remark}
 
-\begin{figure}[!ht]
+\begin{figure}[t]
 \centering
 \includegraphics[width=0.75\textwidth]{figures/fig5_spectral_density.pdf}
 \caption[Hessian spectral density]{Empirical spectral density of the Hessian eigenvalues at critical points for varying $\gamma$ with $\delta = 1$, $n = 100$. As $\gamma$ increases through the critical ratio $\gamma^\star = 4/5$, the spectral support shifts rightward and the gap opens, consistent with the predicted spectral phase transition.}
@@ -564,7 +561,7 @@ of the Hessian.
   \end{remark}
 \end{theorem}
 
-\begin{figure}[!ht]
+\begin{figure}[t]
 \centering
 \begin{tikzpicture}
 \begin{loglogaxis}[
@@ -1151,7 +1148,7 @@ $n = 500$ training images, apply PCA to reduce to $d$ dimensions, and whiten the
 $0.2$ to $2.0$ for $\delta \in \{0.05, 0.10, 0.15\}$, training two-layer ReLU networks
 with gradient flow ($\eta = 5 \times 10^{-4}$, $20{,}000$ steps, $m \le 600$, median over 3 seeds).
 
-\begin{figure}[!ht]
+\begin{figure}[t]
 \centering
 \includegraphics[width=0.75\textwidth]{figures/fig7_mnist_phase_boundary.pdf}
 \caption[MNIST training dynamics]{Training dynamics on whitened MNIST data ($n = 500$).
@@ -1175,13 +1172,14 @@ landscape-level transition (Section~\ref{sec:landscape-dynamics}).
 \label{sec:cifar10}
 To further validate the universality of our results, we repeat the experiment on the CIFAR-10 dataset, which consists of natural images rather than handwritten digits. Using the same preprocessing pipeline (subsampling $n=200$, PCA to $d$ dimensions, whitening) and training protocol, we observe a similar phase transition structure (Figure~\ref{fig:cifar10}).
 
-\begin{figure}[!ht]
+\begin{figure}[t]
 \centering
 \includegraphics[width=0.75\textwidth]{figures/fig8_cifar10_phase_boundary.pdf}
 \caption[CIFAR-10 training dynamics]{Training dynamics on whitened CIFAR-10 data ($n = 200$). The theoretical topological boundary $\gamma^\star(\delta)$ (dashed line) is overlaid on the training loss heatmap. The loss gradient is smooth rather than exhibiting a sharp transition, consistent with the observation that optimization dynamics transcend the static landscape barriers (Section~\ref{sec:landscape-dynamics}).}
 \label{fig:cifar10}
 \end{figure}
 
+\FloatBarrier
 \subsection{General activation functions}\label{sec:general-activations}
 
 The critical ratio $\gamma_\star = 4/(2 + 3\delta)$ was derived for ReLU networks, where
@@ -1424,7 +1422,7 @@ for $\delta < 1/2$, well-approximated by $4/(2+3\delta)$ for small~$\delta$.
 \appendix
 \section{Additional Figures}
 
-\begin{figure}[!ht]
+\begin{figure}[t]
 \centering
 \resizebox{0.85\textwidth}{!}{%
 \begin{tikzpicture}
