--- a/paper/main.tex
+++ b/paper/main.tex
@@ -14,6 +14,7 @@
 \pgfplotsset{compat=1.18}
 \usepackage{booktabs}
 \usepackage{placeins}
+\usepackage{float}
 
 \geometry{margin=1in}
 
@@ -125,7 +126,7 @@ an open problem. We resolve it for two-layer ReLU networks.
   interaction term (Section~\ref{sec:decoupling}), which may be of independent interest.
 \end{enumerate}
 
-\begin{figure}[t]
+\begin{figure}[H]
 \centering
 \begin{tikzpicture}
 \begin{axis}[
@@ -158,7 +159,7 @@ an open problem. We resolve it for two-layer ReLU networks.
 \label{fig:phase-diagram}
 \end{figure}
 
-\begin{figure}[t]
+\begin{figure}[H]
 \centering
 \includegraphics[width=0.75\textwidth]{figures/fig4_phase_boundary_empirical.pdf}
 \caption[Training dynamics and the topological boundary]{Training dynamics for two-layer ReLU networks with $n=100$, gradient flow optimization ($\eta = 5 \times 10^{-4}$, $20{,}000$ steps), nonlinear teacher with $m_{\mathrm{teacher}} = n/2$. Color encodes $\log_{10}(\text{median loss})$ over 3 seeds per $(\delta, \gamma)$ pair. The dashed curve shows the theoretical topological boundary $\gamma^\star = 4/(2 + 3\delta)$ from Theorem~\ref{thm:phase-transition}. While the theory predicts a landscape transition at $\gamma^\star$, gradient flow achieves low loss even in parts of the subcritical regime, indicating that the optimization trajectory avoids the spurious critical points predicted by the static analysis (see Section~\ref{sec:landscape-dynamics}).}
@@ -512,7 +513,7 @@ Let $s_\nu(z) = \int \frac{1}{\lambda - z}\,d\nu(\lambda)$ denote the Stieltjes 
   dynamically inaccessible to practical optimization trajectories.
 \end{remark}
 
-\begin{figure}[t]
+\begin{figure}[H]
 \centering
 \includegraphics[width=0.75\textwidth]{figures/fig5_spectral_density.pdf}
 \caption[Hessian spectral density]{Empirical spectral density of the Hessian eigenvalues at critical points for varying $\gamma$ with $\delta = 1$, $n = 100$. As $\gamma$ increases through the critical ratio $\gamma^\star = 4/5$, the spectral support shifts rightward and the gap opens, consistent with the predicted spectral phase transition.}
@@ -561,7 +562,7 @@ of the Hessian.
   \end{remark}
 \end{theorem}
 
-\begin{figure}[t]
+\begin{figure}[H]
 \centering
 \begin{tikzpicture}
 \begin{loglogaxis}[
@@ -1148,7 +1149,7 @@ $n = 500$ training images, apply PCA to reduce to $d$ dimensions, and whiten the
 $0.2$ to $2.0$ for $\delta \in \{0.05, 0.10, 0.15\}$, training two-layer ReLU networks
 with gradient flow ($\eta = 5 \times 10^{-4}$, $20{,}000$ steps, $m \le 600$, median over 3 seeds).
 
-\begin{figure}[t]
+\begin{figure}[H]
 \centering
 \includegraphics[width=0.75\textwidth]{figures/fig7_mnist_phase_boundary.pdf}
 \caption[MNIST training dynamics]{Training dynamics on whitened MNIST data ($n = 500$).
@@ -1172,7 +1173,7 @@ landscape-level transition (Section~\ref{sec:landscape-dynamics}).
 \label{sec:cifar10}
 To further validate the universality of our results, we repeat the experiment on the CIFAR-10 dataset, which consists of natural images rather than handwritten digits. Using the same preprocessing pipeline (subsampling $n=200$, PCA to $d$ dimensions, whitening) and training protocol, we observe a similar phase transition structure (Figure~\ref{fig:cifar10}).
 
-\begin{figure}[t]
+\begin{figure}[H]
 \centering
 \includegraphics[width=0.75\textwidth]{figures/fig8_cifar10_phase_boundary.pdf}
 \caption[CIFAR-10 training dynamics]{Training dynamics on whitened CIFAR-10 data ($n = 200$). The theoretical topological boundary $\gamma^\star(\delta)$ (dashed line) is overlaid on the training loss heatmap. The loss gradient is smooth rather than exhibiting a sharp transition, consistent with the observation that optimization dynamics transcend the static landscape barriers (Section~\ref{sec:landscape-dynamics}).}
@@ -1422,7 +1423,7 @@ for $\delta < 1/2$, well-approximated by $4/(2+3\delta)$ for small~$\delta$.
 \appendix
 \section{Additional Figures}
 
-\begin{figure}[t]
+\begin{figure}[H]
 \centering
 \resizebox{0.85\textwidth}{!}{%
 \begin{tikzpicture}
