v10n: fix figure placement (spectral density after phase transition, scaling law after Thm 4.8)

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -447,13 +447,6 @@ Let $s_\nu(z) = \int \frac{1}{\lambda - z}\,d\nu(\lambda)$ denote the Stieltjes 
   (exact at $\delta = 1/4$; see Proposition~\ref{prop:isotropic}).
 \end{theorem}
 
-\begin{figure}[t!]
-\centering
-\includegraphics[width=0.75\textwidth]{figures/fig5_spectral_density.pdf}
-\caption[Hessian spectral density]{Empirical spectral density of the Hessian eigenvalues at critical points for varying $\gamma$ with $\delta = 1$, $n = 100$. As $\gamma$ increases through the critical ratio $\gamma^\star = 4/5$, the spectral support shifts rightward and the gap opens, consistent with the predicted spectral phase transition.}
-\label{fig:spectral-density}
-\end{figure}
-
 \begin{remark}\label{rem:delta1}
   For $\Sigma = I_d$ and $\delta = 1$ (i.e., $d = n$), the first-order approximation
   gives $\gamma_\star \approx 4/(2+3) = 4/5$. (The exact
@@ -512,6 +505,13 @@ Let $s_\nu(z) = \int \frac{1}{\lambda - z}\,d\nu(\lambda)$ denote the Stieltjes 
   minima exist in the landscape, their basins of attraction are either vanishingly small or
   dynamically inaccessible to practical optimization trajectories.
 \end{remark}
+
+\begin{figure}[b!]
+\centering
+\includegraphics[width=0.75\textwidth]{figures/fig5_spectral_density.pdf}
+\caption[Hessian spectral density]{Empirical spectral density of the Hessian eigenvalues at critical points for varying $\gamma$ with $\delta = 1$, $n = 100$. As $\gamma$ increases through the critical ratio $\gamma^\star = 4/5$, the spectral support shifts rightward and the gap opens, consistent with the predicted spectral phase transition.}
+\label{fig:spectral-density}
+\end{figure}
 
 \subsection{Spectral gap scaling}
 
